--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,57 +1,17 @@
-<router-outlet></router-outlet>
 <div class="container-fluid">
-
     <div class="row min-vh-100">
         <div class="col-12">
             <header class="row">
-                <!-- Top Nav -->
                 <app-top-nav></app-top-nav>
-                <!-- Top Nav -->
 
-                <!-- Header -->
-                <div class="col-12 bg-white pt-4">
-                    <div class="row">
-                        <div class="col-lg-auto">
-                            <div class="site-logo text-center text-lg-left">
-                                <a routerLink="/">E-Commerce</a>
-                            </div>
-                        </div>
-                        <div class="col-lg-5 mx-auto mt-4 mt-lg-0">
-                            <form action="#">
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <input type="search" class="form-control border-dark" placeholder="Search..." required>
-                                        <button class="btn btn-outline-dark"><i class="fas fa-search"></i></button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                        <div class="col-lg-auto text-center text-lg-left header-item-holder">
-                            <a href="#" class="header-item">
-                                <i class="fas fa-heart me-2"></i><span id="header-favorite">0</span>
-                            </a>
-                            <a href="cart.html" class="header-item">
-                                <i class="fas fa-shopping-bag me-2"></i><span id="header-qty" class="me-3">2</span>
-                                <i class="fas fa-money-bill-wave me-2"></i><span id="header-price">$4,000</span>
-                            </a>
-                        </div>
-                    </div>
-
-                    <!-- Nav -->
-                    <app-navbar></app-navbar>
-                    <!-- Nav -->
-
-                </div>
-                <!-- Header -->
+                <app-header [inputData]="names"></app-header>
 
             </header>
         </div>
 
         <div class="col-12">
-            <!-- Main Content -->
             <main class="row">
 
-                <!-- Category Products -->
                 <div class="col-12">
                     <div class="row">
                         <div class="col-12 py-3">
@@ -60,51 +20,49 @@
                                     <h2>Computers</h2>
                                 </div>
                             </div>
-                            <div class="row">
 
-                                <!-- Product -->
-                                <div class="col-xl-2 col-lg-3 col-sm-6 my-3" *ngFor="let product of products">
-                                    <div class="col-12 bg-white text-center h-100 product-item">
-                                        <div class="row h-100">
-                                            <div class="col-12 p-0 mb-3">
+                            <div class="row">
+                                <div *ngFor="let cat of categories" class="item" style="width:300px; float:left;">
+                                    <div>
+                                        <div>
+                                            <div>
                                                 <a href="product.html">
-                                                    <img src={{product.image}} class="img-fluid">
+                                                    <img src="{{cat.image}}" alt="x" class="img-fluid">
                                                 </a>
                                             </div>
                                             <div class="col-12 mb-3">
-                                                <a href="product.html" class="product-name">{{product.title}}</a>
+                                                <a href="product.html" class="product-name">{{cat.title}}</a>
                                             </div>
                                             <div class="col-12 mb-3">
-                                                    <span class="product-price-old">
-                                                        ${{product.price * 3}}
-                                                    </span>
+                                                <span class="product-price-old">
+
+                                                </span>
                                                 <br>
                                                 <span class="product-price">
-                                                    ${{product.price}}
-                                                    </span>
+
+                                                </span>
                                             </div>
                                             <div class="col-12 mb-3 align-self-end">
-                                                <button class="btn btn-outline-dark" type="button"><i class="fas fa-cart-plus me-2"></i>Add to cart</button>
-                                            </div>
+                                                <button class="btn btn-outline-dark" type="button"><i
+                                                        class="fas fa-cart-plus me-2"></i>Add to cart</button>
                                         </div>
                                     </div>
+                             </div>
+                                    <br />
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- Category Products -->
 
             </main>
-            <!-- Main Content -->
         </div>
-
+        <h4 *ngIf="isBottom" style="text-align: center; color: black;">That's it. thanks for reading</h4>
         <div class="col-12 align-self-end">
-            <!-- Footer -->
             <app-footer></app-footer>
-            <!-- Footer -->
         </div>
     </div>
 </div>
 
-<!-- <router-outlet></router-outlet> -->
+<div class="search-results" infiniteScroll [infiniteScrollDistance]="2"
+[infiniteScrollThrottle]="50" (scrolled)="onScroll()"></div>
