--- a/src/app/categories/dashboard/dashboard.component.html
+++ b/src/app/categories/dashboard/dashboard.component.html
@@ -7,39 +7,7 @@
                 <!-- Top Nav -->
 
                 <!-- Header -->
-                <div class="col-12 bg-white pt-4">
-                    <div class="row">
-                        <div class="col-lg-auto">
-                            <div class="site-logo text-center text-lg-left">
-                                <a href="index.html">E-Commerce</a>
-                            </div>
-                        </div>
-                        <div class="col-lg-5 mx-auto mt-4 mt-lg-0">
-                            <form action="#">
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <input type="search" class="form-control border-dark" placeholder="Search..." required>
-                                        <button class="btn btn-outline-dark"><i class="fas fa-search"></i></button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                        <div class="col-lg-auto text-center text-lg-left header-item-holder">
-                            <a href="#" class="header-item">
-                                <i class="fas fa-heart me-2"></i><span id="header-favorite">0</span>
-                            </a>
-                            <a href="cart.html" class="header-item">
-                                <i class="fas fa-shopping-bag me-2"></i><span id="header-qty" class="me-3">2</span>
-                                <i class="fas fa-money-bill-wave me-2"></i><span id="header-price">$4,000</span>
-                            </a>
-                        </div>
-                    </div>
-
-                    <!-- Nav -->
-                   <app-navbar></app-navbar>
-                    <!-- Nav -->
-
-                </div>
+                <app-header [inputData]="names"></app-header>
                 <!-- Header -->
 
             </header>
@@ -56,11 +24,17 @@
                             <li data-bs-target="#slider" data-bs-slide-to="0" class="active"></li>
                             <li data-bs-target="#slider" data-bs-slide-to="1"></li>
                             <li data-bs-target="#slider" data-bs-slide-to="2"></li>
+                            <li data-bs-target="#slider" data-bs-slide-to="3"></li>
                         </ol>
                         <div class="carousel-inner" role="listbox">
-                            <div class="carousel-item active" *ngFor="let product of products">
+                            <div class="carousel-item active">
+                                <a routerLink="/product/{{activeProduct.id}}">
+                                    <img src="{{activeProduct.image}}" class="slider-img product">
+                                </a>
+                            </div>
+                            <div class="carousel-item" *ngFor="let product of products.slice(1)">
                                 <a routerLink="/product/{{product.id}}">
-                                <img src="{{product.image}}" class="slider-img" style="width:100%; height:700px;" />
+                                <img src="{{product.image}}" class="slider-img product">
                                 </a>
                             </div>
                         </div>
@@ -74,6 +48,7 @@
                         </button>
                     </div>
                 </div>
+              
                 <!-- Slider -->
 
                 <!-- Featured Products -->
@@ -85,7 +60,7 @@
                 </div>
 
                 <div class="col-12">
-                    <a routerLink="/categories" class="btn btn--green btn--small">See All Categories</a>
+                    <a routerLink="/categories" class="btn btn--green btn--small" style="font-weight: bold;">See All Categories</a>
                 </div>
 
                 <div class="col-12 py-3 bg-light d-sm-block d-none">
