--- a/src/app/categories/dashboard/dashboard.component.html
+++ b/src/app/categories/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
                 <!-- Top Nav -->
 
                 <!-- Header -->
-                <app-header [inputData]="names"></app-header>
+                <app-header [inputData]="allProducts"></app-header>
                 <!-- Header -->
 
             </header>
